Scrollbar fix

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,11 +1,11 @@
 
 .App{
-    width: 100dvw;
-    height: 100dvh;
+    width: 100%;
+    min-height: 100dvh;
     position: absolute;
     top: 0;
     left: 0;
-    overflow: hidden;
+    overflow-x: hidden;
     background-color: var(--background);
     color:var(--body);
     display: flex;
@@ -15,7 +15,7 @@
     
     .AppContainer{
         width: 100%;
-        flex-shrink: 0;
+        flex-shrink: 1;
         flex-grow: 1;
         background-color: var(--background);
         display: flex;
@@ -27,18 +27,18 @@
             width: 100%;
             max-width: 1650px;
             flex-grow: 1;
+            flex-shrink: 1;
             border-left: 1px solid var(--borders);
             border-right: 1px solid var(--borders);
-            padding: 20px 40px 0 40px;
-            display: flex;         
-            align-items: center;   
+            padding: 40px;
+            display: flex;
         }
     }
 
     @media screen and (max-width:1024px){
         .AppContainer{
             .AppContent{
-                padding: 20px 20px 0 20px;
+                padding: 20px;
                 border: none;
             }
         }
@@ -47,7 +47,7 @@
     @media screen and (max-width:600px){
         .AppContainer{
             .AppContent{
-                padding: 20px 10px 0 10px;
+                padding: 10px;
             }
         }
     }
